@@ -90,9 +90,9 @@ NFO_MESSAGE(NEITHER_ID_CALLBACK,"%4x neni ani callback ani %s.\n",USE_PREFIX)
 NFO_MESSAGE(UNDEFINED_SPRITE_SET,"Skupina spritu %2x neni definovana v predchozi Akci 1 (sprite %d).\n",USE_PREFIX|HAS_OFFSET)
 NFO_MESSAGE(INVALID_CARGO_TYPE,"Chybny druh nakladu: %2x\n",USE_PREFIX|HAS_OFFSET)
 NFO_MESSAGE(NO_REQD_SETS,"Akce 2 nedeklaruje zadne skupiny spritu pro %s.\n",USE_PREFIX)
-NFO_MESSAGE(SIGNALS,"Navestidla vyzaduji 48, 112 nebo 240 (0x30, 0x70 nebo 0xF0) spritu.\n",USE_PREFIX)
-NFO_MESSAGE(ACTION_5,"Pro tento typ ocekavam %d (0x%x) spritu.\n",USE_PREFIX)
-  MESSAGE_UNUSED(FOUNDATIONS)
+//  MESSAGE_UNUSED(SIGNALS)
+NFO_MESSAGE(ACTION_5,"Pro tento typ ocekavam %t spritu.\n",USE_PREFIX)
+//  MESSAGE_UNUSED(FOUNDATIONS)
 NFO_MESSAGE(UNDEFINED_ID,"ID %2x nebylo dosud definovano.\n",USE_PREFIX|HAS_OFFSET)
 NFO_MESSAGE(INSUFFICIENT_PROPS,"Ocekavam dalsich %d vlastnosti.\n",USE_PREFIX)
 NFO_MESSAGE(INSUFFICIENT_DATA,"Pro vlastnost %2x ocekavam vice dat. (%d bytu na pozici %d.)\n",USE_PREFIX)
