@@ -105,9 +105,9 @@ NFO_MESSAGE(NEITHER_ID_CALLBACK,"%4x is neither callback nor %s.\n",USE_PREFIX)
 NFO_MESSAGE(UNDEFINED_SPRITE_SET,"Sprite set %2x does not appear in the preceeding Action 1 (sprite %d).\n",USE_PREFIX|HAS_OFFSET)
 NFO_MESSAGE(INVALID_CARGO_TYPE,"Invalid cargo type: %2x\n",USE_PREFIX|HAS_OFFSET)
 NFO_MESSAGE(NO_REQD_SETS,"Action 2 declaring no %s sets.\n",USE_PREFIX)
-NFO_MESSAGE(SIGNALS,"Signals require 48, 112, or 240 (0x30, 0x70, or 0xF0) sprites.\n",USE_PREFIX)
-NFO_MESSAGE(ACTION_5,"Expected %d (0x%x) sprites for this type.\n",USE_PREFIX)
-  MESSAGE_UNUSED(FOUNDATIONS)
+NFO_MESSAGE(CANNOT_EXTEND,"This type of action 5 cannot use the extended format.\n",USE_PREFIX)
+NFO_MESSAGE(ACTION_5,"Expected %t sprites for this type.\n",USE_PREFIX)
+NFO_MESSAGE(ACTION_5_LIMIT,"Loading sprites 0x%x..0x%x into an array with only 0x%x entries.\n",USE_PREFIX)
 NFO_MESSAGE(UNDEFINED_ID,"ID %2x has not been defined.\n",USE_PREFIX|HAS_OFFSET)
 NFO_MESSAGE(INSUFFICIENT_PROPS,"Expected %d more properties.\n",USE_PREFIX)
 NFO_MESSAGE(INSUFFICIENT_DATA,"Expected more data for prop %2x. (%d bytes at %d.)\n",USE_PREFIX)
